--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         </div>
     </main>
     
+        <div class="footer">
+            <a href="https://arunyagoojar.me"><img src="./p.png"/></a>
+            <a href="https://github.com/arunyagoojar"><img src="./g.png"/></a>
+            <a href="https://www.linkedin.com/in/arunyagoojar/"><img src="./l.png"/></a>
+        </div>
     <!-- partial -->
 
     <script src="./script.js"></script>
